[package]
name = "elevator"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true   

[dependencies]
rpcclient = { path = "rpcclient" }
litcrypt = "0.3"

[build-dependencies]
static_vcruntime = "2.0"