[package]
name = "rpcclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.rpcclient]
opt-level = 3
debug = 0

[dependencies]
litcrypt = "0.3"
dinvoke = { path = "../hidden" }
manualmap = { path = "../manualmap" }
data = { path = "../data" }
hex = "*"
winapi = "*"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_Threading"
]